--- a/Application/Home/View/default/Auth/login_base.html
+++ b/Application/Home/View/default/Auth/login_base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<include file="Login/login_head"/>
+	<include file="Auth/login_head"/>
 </head>
 <body id="login_body">
 	
@@ -10,7 +10,7 @@
 	<!-- /主体 -->
 
 	<!-- 底部 -->
-	<include file="Login/login_footer"/>
+	<include file="Auth/login_footer"/>
 	<!-- /底部 -->
     <block name="script"></block>
 </body>
