--- a/Public/Home/css/weiphp.css
+++ b/Public/Home/css/weiphp.css
@@ -22,7 +22,7 @@
 .intro_list_2{ overflow:hidden; margin:0 112px;}
 .intro_list_2 img{ display:block; margin-bottom:10px;}
 .intro_list_2 li{ margin:30px; float:left; display:inline-block; text-align:center}
-.bottom{ width:100%; margin-top:50px; padding:20px 0 20px; color:#fff; background:none; text-align:center}
+.bottom{ width:100%; margin-top:0; padding:20px 0 8px; color:#fff; background:none; text-align:center}
 .foot_nav{ color:#999;}
 .b_hot_line{ text-align:center; font-size:50px; padding:0 0;}
 .copyright{ text-align:center; line-height:60px; font-size:12px; color:#888;}
