--- a/Application/Teacher/View/Public/head.html
+++ b/Application/Teacher/View/Public/head.html
@@ -33,7 +33,7 @@
 var  IMG_PATH = "__COMMON__/images";
 var  STATIC = "__STATIC__";
 var  ROOT = "__ROOT__";
-var  UPLOAD_PICTURE = "{:U('home/File/uploadPicture',array('session_id'=>session_id()))}";
+var  UPLOAD_PICTURE = "{:U('Admin/File/uploadPicture',array('session_id'=>session_id()))}";
 var  UPLOAD_FILE = "{:U('File/upload',array('session_id'=>session_id()))}";
 </script>
 <!-- 页面header钩子，一般用于加载插件CSS文件和代码 -->
