--- a/Application/Teacher/View/Student/add.html
+++ b/Application/Teacher/View/Student/add.html
@@ -1,7 +1,7 @@
 <extend name="Base/common" />
 <block name="body">
-    <div class="span9 page_message">
-        <section id="contents"> <include file="Addons/_nav" />
+    <div class="wrap">
+        <section id="contents">
             <ul class="tab-nav nav">
                 <li class="">
                     <a href="">新增学生<span class="arrow fa fa-sort-up"></span>
@@ -9,104 +9,86 @@
             </ul>
             <div class="tab-content">
                 <!-- 表单 -->
-                <form action="{:U()}" method="post" class="form-horizontal">
-                    <div class="form-item">
-                        <label class="item-label">登录名</label>
-                        <div class="controls">
-                            <input type="text" class="text input-large" name="username" value="">
-                            <span class="check-tips">（学生登录系统的用户名）</span>
+                <form class="form-horizontal bind_step_form" method="post" action="{:U()}" id="form" style="overflow:hidden; zoom:1">
+                    <!-- 基础文档模型 -->
+                    <div class="tab-pane in tab1" id="tab1">
+                        <div class="item_wrap">
+                            <div class="form-item cf toggle-public_name">
+                                <label class="item-label"> <span class="need_flag">*</span> 登录名 <span class="check-tips"> （学生登录系统的用户名）  </span></label>
+                                <div class="controls">
+                                    <input type="text" autocomplete="false" value="{$info.username}" name="username" class="text input-large">
+                                </div>
+                            </div>
+                            <div class="form-item cf toggle-public_name">
+                                <label class="item-label"> <span class="need_flag">*</span> 姓名 <span class="check-tips"> （真实姓名）  </span></label>
+                                <div class="controls">
+                                    <input type="text" value="{$info.nickname}" name="nickname" class="text input-large">
+                                </div>
+                            </div>
+                            <div class="form-item cf">
+                                <label class="item-label"> <span class="need_flag">*</span> 性别 <span class="check-tips"> </span></label>
+                                <div class="controls">
+                                    <select name="sex">
+                                        <option value="男" <eq name="info.sex" value="男">selected</eq> >男</option>
+                                        <option value="女" <eq name="info.sex" value="女">selected</eq> >女</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-item cf toggle-public_name">
+                                <label class="item-label"> <span class="need_flag">*</span> 密码 <span class="check-tips"> （长度在6到12位之间）  </span></label>
+                                <div class="controls">
+                                    <input type="password" autocomplete="false" value="{$info.password}" name="password" class="text input-large">
+                                </div>
+                            </div>
+                            <div class="form-item cf toggle-public_name">
+                                <label class="item-label"> <span class="need_flag">*</span> 确认密码 <span class="check-tips">   </span></label>
+                                <div class="controls">
+                                    <input type="password" autocomplete="false" value="{$info.password}" name="repassword" class="text input-large">
+                                </div>
+                            </div>
+                            <div class="form-item cf toggle-public_name">
+                                <label class="item-label"> <span class="need_flag">*</span> 邮箱 <span class="check-tips">  </span></label>
+                                <div class="controls">
+                                    <input type="email" value="{$info.email}" name="email" class="text input-large">
+                                </div>
+                            </div>
+                            <div class="form-item cf toggle-public_name">
+                                <label class="item-label"> 手机号码 <span class="check-tips">  </span></label>
+                                <div class="controls">
+                                    <input type="text" value="{$info.phone}" name="phone" class="text input-large">
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-item">
-                        <label class="item-label">姓名</label>
-                        <div class="controls">
-                            <input type="text" class="text input-large" name="nickname" value="">
-                            <span class="check-tips"></span>
+                        <div class="form-item cf mt_10 bind_step_form_next_item">
+                            <button target-form="form-horizontal" type="submit" id="submit" class="btn submit-btn ajax-post">确定</button>
+                            <button target-form="form-horizontal" type="submit" id="submit" class="btn return-btn ajax-post">返回</button>
                         </div>
-                    </div>
-                    <div class="form-item">
-                        <label class="item-label">性别</label>
-                        <div class="controls">
-                            <select name="sex" style="width: 238px">
-                                <option></option>
-                                <option value="男">&nbsp;&nbsp;&nbsp;&nbsp;男&nbsp;&nbsp;&nbsp;&nbsp;</option>
-                                <option value="女">&nbsp;&nbsp;&nbsp;&nbsp;女&nbsp;&nbsp;&nbsp;&nbsp;</option>
-                            </select>
-                            <span class="check-tips"></span>
-                        </div>
-                    </div>
-
-                    <div class="form-item">
-                        <label class="item-label">密码</label>
-                        <div class="controls">
-                            <input type="password" class="text input-large" name="password" value="">
-                            <span class="check-tips">（用户密码不能少于6位）</span>
-                        </div>
-                    </div>
-                    <div class="form-item">
-                        <label class="item-label">确认密码</label>
-                        <div class="controls">
-                            <input type="password" class="text input-large" name="repassword" value="">
-                        </div>
-                    </div>
-                    <div class="form-item">
-                        <label class="item-label">邮箱</label>
-                        <div class="controls">
-                            <input type="text" class="text input-large" name="email" value="">
-                            <span class="check-tips">（用户邮箱，用于找回密码等安全操作）</span>
-                        </div>
-                    </div>
-                    <div class="form-item">
-                        <label class="item-label">备注</label>
-                        <div class="controls">
-                            <textarea name="remark" style="min-height: 100px;width: 380px"></textarea>
-
-                        </div>
-                    </div>
-                    <div class="form-item" style="padding-left: 180px">
-                        <button class="btn submit-btn ajax-post" id="submit" type="submit" target-form="form-horizontal">确 定</button>
-                        <button class="btn btn-return" onclick="javascript:history.back(-1);return false;">返 回</button>
                     </div>
                 </form>
             </div>
-    </section>
-    </div>
-    <!-- 用户分组弹框 -->
-    <div class="group_html" style="display:none">
-        <div class="manage_group normal_dialog">
-            <div class="content">
-                <!--            <select name="type" id="select_type" style="width:25%">
-                                    <option value="0">移入</option>
-                                    <option value="1">移出</option>
-                            </select>-->
-                <select name="group" id="select_group" style="width:100%">
-                    <volist name="auth_group" id="vo">
-                        <option value="{$vo.id}">{$vo.title}</option>
-                    </volist>
-                </select>
-                <div class="btn_wrap"><button class="btn setting_group" url="{:U('changeGroup')}" target-form="ids">确定</button></div>
+
+            <!--帮助消息
+            <div class="help_content">
+                <h3>帮助信息</h3>
+                <p>以上消息可以从公众平台里找到，如下图</p>
+                <p><img src="{:SITE_URL}/Public/Home/images/help01.png" width="800"></p>
+                <a name="setting"></a>
+                 <p>配置域名授权：在开发者中心，功能列表里配置，配置授权域名如下图</p>
+                <p><img src="{:SITE_URL}/Public/Home/images/help05.png" width="800"></p>
+                 <p>配置JS接口安全域名，在公众号设置-功能配置里面配置，配置JS安全域名如下图</p>
+                <p><img src="{:SITE_URL}/Public/Home/images/help06.png" width="800"></p>
             </div>
-        </div>
-    </div>
-    <!-- 备注用户名 -->
-    <div class="remark_html" style="display:none">
-        <div class="manage_group normal_dialog">
-            <div class="content">
-                <input name="remark" id="set_remark" value="" placeholder="请输入备注信息" class="text"  />
-                <div class="btn_wrap"><button class="btn setting_remark" url="{:U('set_remark')}">确定</button></div>
-            </div>
-        </div>
-    </div>
+            -->
+        </section>
 </block>
 <block name="script">
     <script type="text/javascript">
-        var url = "__SELF__";
-        //导航高亮
-        $(".nav li a[href='"+url+"']").parent().addClass('active');
+//        $('#submit').click(function(){
+//            $('#form').submit();
+//        });
+
         $(function(){
 
-
-
-        })
+        });
     </script>
 </block>
