--- a/Application/Teacher/View/Public/head.html
+++ b/Application/Teacher/View/Public/head.html
@@ -1,4 +1,4 @@
-<meta charset="UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta content="{:C('WEB_SITE_KEYWORD')}" name="keywords"/>
 <meta content="{:C('WEB_SITE_DESCRIPTION')}" name="description"/>
 <link rel="shortcut icon" href="{:SITE_URL}/favicon.ico">
