--- a/Application/Teacher/View/Public/header.html
+++ b/Application/Teacher/View/Public/header.html
@@ -9,11 +9,7 @@
     <div class="wrap">
     
        <a class="brand" title="{:C('WEB_SITE_TITLE')}" href="{:U('index/index')}">
-       <notempty name="userInfo[website_logo]">
-       		<img height="52" src="{$userInfo.website_logo|get_cover_url}"/>
-       	<else/>
-       		<img height="52" src="__COMMON__/images/logo.png"/>
-       </notempty>
+           <img height="52" src="__COMMON__/images/logo.png"/>
        </a>
         <if condition="is_login()">
         	<div class="switch_mp">
@@ -37,18 +33,17 @@
                     </li>
                     <li class="dropdown admin_nav">
                         <a href="#" class="dropdown-toggle login-nav" data-toggle="dropdown" style="">
-                            <notempty name="myinfo[headimgurl]">
-                                <img class="admin_head url" src="{$myinfo.headimgurl}"/>
+                            <notempty name="myinfo.headface_url">
+                                <img class="admin_head url" src="{$myinfo.headface_url|get_cover_url}"/>
                                 <else/>
                                 <img class="admin_head default" src="__PUBLIC__/{$Think.MODULE_NAME}/images/default.png"/>
                             </notempty>
                             {$myinfo.nickname|getShort=4}<b class="pl_5 fa fa-sort-down"></b>
                         </a>
                         <ul class="dropdown-menu" style="display:none">
-                            <if condition="$mid==C('USER_ADMINISTRATOR')"><li><a href="{:U ('Admin/Index/Index')}" target="_blank">后台管理</a></li></if>
                             <li><a href="{:U ('Teacher/Index/center')}">个人信息</a></li>
-                            <li><a href="{:U('User/profile')}">修改密码</a></li>
-                            <li><a href="{:U('User/logout')}">退出</a></li>
+                            <li><a href="{:U('Index/chpassd')}">修改密码</a></li>
+                            <li><a href="{:U('Auth/logout')}">退出</a></li>
                         </ul>
                     </li>
                 </ul>
