--- a/Application/Teacher/View/Student/add.html
+++ b/Application/Teacher/View/Student/add.html
@@ -2,27 +2,40 @@
 <block name="body">
     <div class="wrap">
         <section id="contents">
-            <ul class="tab-nav nav">
-                <li class="">
-                    <a href="">新增学生<span class="arrow fa fa-sort-up"></span>
-                    </a></li>
-            </ul>
             <div class="tab-content">
                 <!-- 表单 -->
                 <form class="form-horizontal bind_step_form" method="post" action="{:U()}" id="form" style="overflow:hidden; zoom:1">
                     <!-- 基础文档模型 -->
                     <div class="tab-pane in tab1" id="tab1">
                         <div class="item_wrap">
+
+                            <h3 style="padding-bottom:30px; text-align:center">
+                                <notempty name="info">
+                                    修改{$info.nickname}的信息
+                                    <input type="hidden" name="id" value="{$info.id}">
+                                    <else/>
+                                    新增学生
+                                </notempty>
+                                </h3>
+
                             <div class="form-item cf toggle-public_name">
                                 <label class="item-label"> <span class="need_flag">*</span> 登录名 <span class="check-tips"> （学生登录系统的用户名）  </span></label>
                                 <div class="controls">
-                                    <input type="text" autocomplete="false" value="{$info.username}" name="username" class="text input-large">
+                                    <input type="text" placeholder="输入登录名" autocomplete="false" value="{$info.username}" name="username" class="text input-large">
                                 </div>
                             </div>
                             <div class="form-item cf toggle-public_name">
                                 <label class="item-label"> <span class="need_flag">*</span> 姓名 <span class="check-tips"> （真实姓名）  </span></label>
                                 <div class="controls">
-                                    <input type="text" value="{$info.nickname}" name="nickname" class="text input-large">
+                                    <input type="text" placeholder="输入真实姓名" value="{$info.nickname}" name="nickname" class="text input-large">
+                                </div>
+                            </div>
+                            <div class="form-item cf">
+                                <label class="item-label"> <span class="need_flag">*</span> 标签 <span class="check-tips">（用于标记学生类别，比如2014级，多个标签用英文逗号分隔）</span></label>
+                                <div class="controls">
+                                    <input type="text" id="tag" placeholder="输入标签，多个标签用英文逗号分隔" value="{$info.tag}" name="tag" class="text input-large">
+
+
                                 </div>
                             </div>
                             <div class="form-item cf">
@@ -35,60 +48,109 @@
                                 </div>
                             </div>
                             <div class="form-item cf toggle-public_name">
-                                <label class="item-label"> <span class="need_flag">*</span> 密码 <span class="check-tips"> （长度在6到12位之间）  </span></label>
+                                <label class="item-label"> <span class="need_flag">*</span> 登录密码 <span class="check-tips"> （长度在6到12位之间）  </span></label>
                                 <div class="controls">
-                                    <input type="password" autocomplete="false" value="{$info.password}" name="password" class="text input-large">
+                                    <input type="password" placeholder="输入登录密码" autocomplete="false" value="{$info.password}" name="password" class="text input-large">
                                 </div>
                             </div>
                             <div class="form-item cf toggle-public_name">
                                 <label class="item-label"> <span class="need_flag">*</span> 确认密码 <span class="check-tips">   </span></label>
                                 <div class="controls">
-                                    <input type="password" autocomplete="false" value="{$info.password}" name="repassword" class="text input-large">
+                                    <input type="password" placeholder="输入确认密码" autocomplete="false" value="{$info.password}" name="repassword" class="text input-large">
                                 </div>
                             </div>
                             <div class="form-item cf toggle-public_name">
                                 <label class="item-label"> <span class="need_flag">*</span> 邮箱 <span class="check-tips">  </span></label>
                                 <div class="controls">
-                                    <input type="email" value="{$info.email}" name="email" class="text input-large">
+                                    <input type="email" placeholder="输入邮箱" value="{$info.email}" name="email" class="text input-large">
                                 </div>
                             </div>
                             <div class="form-item cf toggle-public_name">
                                 <label class="item-label"> 手机号码 <span class="check-tips">  </span></label>
                                 <div class="controls">
-                                    <input type="text" value="{$info.phone}" name="phone" class="text input-large">
+                                    <input type="text" placeholder="输入手机号码" value="{$info.phone}" name="phone" class="text input-large">
                                 </div>
                             </div>
                         </div>
                         <div class="form-item cf mt_10 bind_step_form_next_item">
                             <button target-form="form-horizontal" type="submit" id="submit" class="btn submit-btn ajax-post">确定</button>
-                            <button target-form="form-horizontal" type="submit" id="submit" class="btn return-btn ajax-post">返回</button>
+                            <button target-form="form-horizontal" onclick="javascript:history.back(-1);return false;" class="btn return-btn">返回</button>
                         </div>
                     </div>
                 </form>
+                <input type="hidden" id="tagData" value="{$tags}">
             </div>
-
-            <!--帮助消息
-            <div class="help_content">
-                <h3>帮助信息</h3>
-                <p>以上消息可以从公众平台里找到，如下图</p>
-                <p><img src="{:SITE_URL}/Public/Home/images/help01.png" width="800"></p>
-                <a name="setting"></a>
-                 <p>配置域名授权：在开发者中心，功能列表里配置，配置授权域名如下图</p>
-                <p><img src="{:SITE_URL}/Public/Home/images/help05.png" width="800"></p>
-                 <p>配置JS接口安全域名，在公众号设置-功能配置里面配置，配置JS安全域名如下图</p>
-                <p><img src="{:SITE_URL}/Public/Home/images/help06.png" width="800"></p>
-            </div>
-            -->
         </section>
 </block>
+
 <block name="script">
     <script type="text/javascript">
-//        $('#submit').click(function(){
-//            $('#form').submit();
-//        });
+        var url = "__SELF__";
+        //导航高亮
+        $(".nav li a[href='"+url.substr(0,url.lastIndexOf("/"))+"/index.html']").parent().addClass('active');
 
-        $(function(){
+        var tagData = $('#tagData').val().split(',');
 
-        });
+        /**
+         *
+         * @param $input
+         * @param tagData
+         * @constructor
+         */
+        function TagPicker(inputElementId,tagData){
+            var $input = $('#'+inputElementId);
+            var inputTagData = $input.val().split(',');
+
+            //生成tag
+            if(tagData.length == 0){
+                return;
+            }
+            var tagMap = {};
+
+            var htmlStr = '<div id="tagPicker" class="tag-picker" style="padding: 10px 0">';
+
+            htmlStr += '<ul>';
+            $.each(tagData,function(i,v){
+                tagMap[v] = i;
+                htmlStr += '<li data="'+v+'">'+v+'</li>';
+            });
+            htmlStr += '</ul>';
+            htmlStr += '</div>';
+            $div = $(htmlStr);
+            //注册事件
+            $div.find('ul li').each(function(index){
+                $(this).click(function(){
+                    if($(this).hasClass('select')){
+                        $(this).removeClass('select');
+                    }else{
+                        $(this).addClass('select');
+                    }
+                    updateInputVal();//更新值
+                })
+            });
+            //初始化选择
+            $.each(inputTagData,function(i,v){
+                $div.find('ul li[data='+v+']').addClass('select');
+            });
+
+            //输入框绑定编辑事件
+            $input.bind('input propertychange', function(e) {
+                var newTags = $(this).val();
+                var newTagsArray = newTags.split(',');
+                $div.find('ul li').removeClass('select');
+                $.each(newTagsArray,function(i,v){
+                    $div.find('ul li[data="'+v+'"]').addClass('select');
+                });
+            });
+            $input.after($div);
+            function updateInputVal(){
+                var arr = [];
+                $div.find('ul li.select').each(function(i){
+                    arr.push($(this).attr('data'));
+                });
+                $input.val(arr.join(','));
+            }
+        }
+        new TagPicker('tag',tagData);
     </script>
 </block>
