--- a/Application/Student/View/Auth/login_s.html
+++ b/Application/Student/View/Auth/login_s.html
@@ -73,7 +73,7 @@
                                 <button type="submit" class="btn btn-large">登 录</button>
                             </div>
                             <div class="controls">
-                                <a style="width:280px;" class="btn border-btn-main btn-large" href="{:U('User/register')}">导师入口</a>
+                                <a style="width:280px;" class="btn border-btn-main btn-large" href="{:U('Teacher/Auth/login')}">导师入口</a>
                             </div>
                         </div>
                     </div>
