--- a/Application/Teacher/View/Auth/login.html
+++ b/Application/Teacher/View/Auth/login.html
@@ -19,14 +19,11 @@
 
     <div class="top_content">
         <div class="log_wrap">
-            <div class="top_content_r">
-                <img src="__PUBLIC__/Common/images/about/img/banner_pic.png?20150723"/>
-            </div>
             <section class="login_box">
                 <form class="login-form" action="__SELF__" method="post">
                     <input type="hidden" value="{$u}">
                     <div class="form_body">
-                        <h6>{:C('WEB_SITE_TITLE')}欢迎使用论文投稿系统(导师入口)</h6>
+                        <h6>{:C('WEB_SITE_TITLE')}欢迎使用论文投稿系统（导师入口）</h6>
                         <div class="input_panel">
                             <div class="control-group">
                                 <label class="control-label" for="inputEmail">用户名</label>
