--- a/Application/Teacher/View/Index/index.html
+++ b/Application/Teacher/View/Index/index.html
@@ -3,7 +3,7 @@
     <div class="span9 page_message">
         <section id="contents"> <include file="Addons/_nav" />
             <div class="table-bar">
-                <h2>这里还没想好放什么</h2>
+                <h2 style="text-align: center;color: #bbb">这里还没想好放什么</h2>
             </div>
         </section>
     </div>
