--- a/Application/Teacher/View/Public/header.html
+++ b/Application/Teacher/View/Public/header.html
@@ -43,7 +43,7 @@
                         <ul class="dropdown-menu" style="display:none">
                             <li><a href="{:U ('Teacher/Index/center')}">个人信息</a></li>
                             <li><a href="{:U('Index/chpassd')}">修改密码</a></li>
-                            <li><a href="{:U('Auth/logout')}">退出</a></li>
+                            <li><a class="ajax-get" href="{:U('Auth/logout')}">退出</a></li>
                         </ul>
                     </li>
                 </ul>
