--- a/Application/Student/View/Index/center.html
+++ b/Application/Student/View/Index/center.html
@@ -2,7 +2,7 @@
 <block name="body">
     <div class="wrap">
         <section id="contents">
-            <div class="tab-content" style="margin:30px auto;">
+            <div class="tab-content">
 
                 <!-- 表单 -->
                 <form class="form-horizontal bind_step_form" method="post" action="{:U('Index/updateInfo')}" id="form" style="overflow:hidden; zoom:1">
@@ -28,6 +28,15 @@
                                     <input type="text" value="{$info.nickname}" name="nickname" class="text input-large">
                                 </div>
                             </div>
+                            <div class="form-item cf">
+                                <label class="item-label"> <span class="need_flag">*</span> 性别 <span class="check-tips"> </span></label>
+                                <div class="controls">
+                                    <select name="sex">
+                                        <option value="男" <eq name="info.sex" value="男">selected</eq> >男</option>
+                                        <option value="女" <eq name="info.sex" value="女">selected</eq> >女</option>
+                                    </select>
+                                </div>
+                            </div>
                             <div class="form-item cf toggle-copy_right">
                                 <label class="item-label"> <span class="need_flag">*</span>邮箱 <span class="check-tips"></span></label>
                                 <div class="controls">
@@ -35,7 +44,7 @@
                                 </div>
                             </div>
                             <div class="form-item cf toggle-copy_right">
-                                <label class="item-label"> <span class="need_flag">*</span>手机号码 <span class="check-tips"></span></label>
+                                <label class="item-label"> 手机号码 <span class="check-tips"></span></label>
                                 <div class="controls">
                                     <input type="text" value="{$info.phone}" name="phone" class="text input-large">
                                 </div>
