--- a/Application/Student/View/Index/chpassd.html
+++ b/Application/Student/View/Index/chpassd.html
@@ -5,39 +5,27 @@
             <div class="tab-content" style="margin:30px auto;">
 
                 <!-- 表单 -->
-                <form class="form-horizontal bind_step_form" method="post" action="{:U('Index/updateInfo')}" id="form" style="overflow:hidden; zoom:1">
+                <form class="form-horizontal bind_step_form" method="post" action="__SELF__" id="form" style="overflow:hidden; zoom:1">
                     <!-- 基础文档模型 -->
                     <div class="tab-pane in tab1" id="tab1">
                         <div class="item_wrap">
-                            <h3 style="padding-bottom:30px; text-align:center">个人信息编辑</h3>
-                            <div class="form-item cf">
-                                <label class="item-label"> 个人头像 <span class="check-tips">（点击修改图片）</span></label>
-                                <div class="controls uploadrow2" title="点击修改图片" rel="headface_url">
-                                    <input type="file" id="upload_picture_headface_url">
-                                    <input type="hidden" name="headface_url" id="cover_id_headface_url" value="{$info.headface_url}"/>
-                                    <div class="upload-img-box">
-                                        <notempty name="info.headface_url">
-                                            <div class="upload-pre-item2"><img width="100" height="100" src="{$info.headface_url|get_cover_url}"/></div>
-                                            <em class="edit_img_icon">&nbsp;</em> </notempty>
-                                    </div>
+                            <h3 style="padding-bottom:30px; text-align:center">修改密码</h3>
+                            <div class="form-item cf toggle-copy_right">
+                                <label class="item-label"> <span class="need_flag">*</span>原密码 <span class="check-tips"></span></label>
+                                <div class="controls">
+                                    <input type="password" name="old" placeholder="请输入原密码" class="text input-large">
                                 </div>
                             </div>
                             <div class="form-item cf toggle-copy_right">
-                                <label class="item-label"> <span class="need_flag">*</span>姓名 <span class="check-tips"></span></label>
+                                <label class="item-label"> <span class="need_flag">*</span>新密码 <span class="check-tips"></span></label>
                                 <div class="controls">
-                                    <input type="text" value="{$info.nickname}" name="nickname" class="text input-large">
+                                    <input type="password" name="password" placeholder="输入新密码" class="text input-large">
                                 </div>
                             </div>
                             <div class="form-item cf toggle-copy_right">
-                                <label class="item-label"> <span class="need_flag">*</span>邮箱 <span class="check-tips"></span></label>
+                                <label class="item-label"> <span class="need_flag">*</span>确认密码 <span class="check-tips"></span></label>
                                 <div class="controls">
-                                    <input type="text" value="{$info.email}" name="email" class="text input-large">
-                                </div>
-                            </div>
-                            <div class="form-item cf toggle-copy_right">
-                                <label class="item-label"> <span class="need_flag">*</span>手机号码 <span class="check-tips"></span></label>
-                                <div class="controls">
-                                    <input type="text" value="{$info.phone}" name="phone" class="text input-large">
+                                    <input type="password" name="repassword" placeholder="输入确认密码" class="text input-large">
                                 </div>
                             </div>
                             <div class="form-item cf mt_10 bind_step_form_next_item">
