--- a/Application/Teacher/View/Periodical/index.html
+++ b/Application/Teacher/View/Periodical/index.html
@@ -6,25 +6,23 @@
 
                 <div class="fl">
                     <div class="tools">
-                        <a href="{:U('Student/add')}" class="btn">新增学生</a>
-                        <a target-form="ids" href="{:U('Student/del')}" class="btn ajax-post confirm">删除</a>
-                        <a target-form="ids" href="{:U('Student/chstatus',array('status'=>1))}" class="btn ajax-post">启用</a>
-                        <a target-form="ids" href="{:U('Student/chstatus',array('status'=>0))}" class="btn ajax-post">禁用</a>
+                        <a href="{:U('Periodical/add')}" class="btn">新增期刊</a>
+                        <a target-form="ids" href="{:U('Periodical/del')}" class="btn ajax-post confirm">删除</a>
                     </div>
                 </div>
                 <!-- 高级搜索 -->
                 <div class="search-form fr cf">
                     <div class="sleft" style="margin-right:10px;">
                         <select name="tag" style="border:none; padding:4px; margin:0;">
-                            <option value="{:U('Student/index')}">全部</option>
+                            <option value="{:U('Periodical/index')}">全部</option>
                             <volist name="tags" id="vo">
-                                <option value="{:U('Student/index',array('tag'=>$vo))}" <if condition="I('tag') eq $vo">selected</if> >{$vo}</option>
+                                <option value="{:U('Periodical/index',array('tag'=>$vo))}" <if condition="I('tag') eq $vo">selected</if> >{$vo}</option>
                             </volist>
                         </select>
                     </div>
                     <div class="sleft">
                         <input type="text" placeholder="请输入关键字" value="{:I('nickname')}" class="search-input" name="nickname">
-                        <a url="{:U('Student/index',$get_param)}" id="search" href="javascript:;" class="sch-btn"><i class="btn-search"></i></a>
+                        <a url="{:U('Periodical/index',$get_param)}" id="search" href="javascript:;" class="sch-btn"><i class="btn-search"></i></a>
                     </div>
 
                 </div>
@@ -41,10 +39,10 @@
                         <tr>
                             <th class="row-selected row-selected"> <input type="checkbox" class="check-all regular-checkbox" id="checkAll">
                                 <label for="checkAll"></label></th>
-                            <th width="100">姓名</th>
-                            <th width="100">登录账号</th>
-                            <th>标签</th>
+                            <th width="100">期刊名</th>
+                            <th width="100">级别</th>
                             <th>备注</th>
+                            <th>加入时间</th>
                             <th width="150">操作</th>
                         </tr>
                         </thead>
@@ -55,19 +53,13 @@
                             <tr>
                                 <td><input type="checkbox" id="check_{$vo.id}" name="ids[]" value="{$vo.id}" class="ids regular-checkbox">
                                     <label for="check_{$vo.id}"></label></td>
-                                <td>{$vo.nickname}</td>
-                                <td>{$vo.username}</td>
+                                <td>{$vo.name}</td>
                                 <td>{$vo.tag}</td>
                                 <td>{$vo.remark}</td>
+                                <td>{$vo.create_time}</td>
                                 <td>
-                                    <if condition="$vo.status eq 1">
-                                        <a href="{:U('Student/chstatus',array('id'=>$vo['id'],'status'=>0))}" target="_self" class="ajax-get">禁用</a>
-                                        <else/>
-                                        <a href="{:U('Student/chstatus',array('id'=>$vo['id'],'status'=>1))}" target="_self" class="ajax-get">启用</a>
-                                    </if>
-
-                                    <a href="{:U('Student/edit',array('sid'=>$vo['id']))}" target="_self">编辑</a>
-                                    <a class="confirm" href="{:U('Student/del',array('id'=>$vo['id']))}" target="_self">删除</a>
+                                    <a href="{:U('Periodical/edit',array('sid'=>$vo['id']))}" target="_self">编辑</a>
+                                    <a class="confirm" href="{:U('Periodical/del',array('id'=>$vo['id']))}" target="_self">删除</a>
                                 </td>
                             </tr>
                         </volist>
@@ -78,41 +70,10 @@
             <div class="page"> {$_page|default=''} </div>
         </section>
     </div>
-    <input type="hidden" id="tagData" value="{$tags}">
 </block>
 <block name="script">
     <script type="text/javascript">
         var url = "__SELF__";
-        var tagData = $('#tagData').val().split(',');
-        function TagSelecter(containerId,tagData){
-            //生成tag
-            if(tagData.length == 0){
-                return;
-            }
-            $container = $('#'+containerId);
-            var htmlStr = '<div class="tag-selector" style="padding: 10px 0">';
-
-            htmlStr += '<ul>';
-            $.each(tagData,function(i,v){
-                htmlStr += '<li data="'+v+'">'+v+'</li>';
-            });
-            htmlStr += '</ul>';
-            htmlStr += '</div>';
-            $div = $(htmlStr);
-            //注册事件
-            $div.find('ul li').each(function(index){
-                $(this).click(function(){
-                    if($(this).hasClass('select')){
-                        $(this).removeClass('select');
-                    }else{
-                        $(this).addClass('select');
-                    }
-//                    updateInputVal();//更新值
-                })
-            });
-            $container.append($div);
-        }
-//        new TagSelecter('tagSelector',tagData);
         //导航高亮
         $(".nav li a[href='"+url+"']").parent().addClass('active');
         $(function(){
