--- a/Application/Teacher/View/Index/center.html
+++ b/Application/Teacher/View/Index/center.html
@@ -2,7 +2,7 @@
 <block name="body">
     <div class="wrap">
         <section id="contents">
-            <div class="tab-content" style="margin:30px auto;">
+            <div class="tab-content">
 
                 <!-- 表单 -->
                 <form class="form-horizontal bind_step_form" method="post" action="{:U('Index/updateInfo')}" id="form" style="overflow:hidden; zoom:1">
