--- a/Application/Teacher/View/Public/footer.html
+++ b/Application/Teacher/View/Public/footer.html
@@ -1,5 +1,5 @@
 <div class="wrap bottom" style="background:#fff; border-top:#ddd;">
-    <p class="copyright">本系统由<a href="http://weiphp.cn" target="_blank">WeiPHP</a>强力驱动</p>
+    <p class="copyright">本系统由<a href="http://www.hoyoung.net" target="_blank">hoyoung</a>强力驱动</p>
 </div>
 
 <include file="Public/var"/>
