--- a/Application/Teacher/View/Periodical/index.html
+++ b/Application/Teacher/View/Periodical/index.html
@@ -39,11 +39,13 @@
                         <tr>
                             <th class="row-selected row-selected"> <input type="checkbox" class="check-all regular-checkbox" id="checkAll">
                                 <label for="checkAll"></label></th>
-                            <th width="100">期刊名</th>
+                            <th>期刊名</th>
                             <th width="100">级别</th>
+                            <th width="120">领域</th>
+                            <th>网址</th>
                             <th>备注</th>
-                            <th>加入时间</th>
-                            <th width="150">操作</th>
+                            <th width="130">加入时间</th>
+                            <th width="100">操作</th>
                         </tr>
                         </thead>
 
@@ -55,10 +57,12 @@
                                     <label for="check_{$vo.id}"></label></td>
                                 <td>{$vo.name}</td>
                                 <td>{$vo.tag}</td>
+                                <td>{$vo.domain}</td>
+                                <td>{$vo.web_site}</td>
                                 <td>{$vo.remark}</td>
-                                <td>{$vo.create_time}</td>
+                                <td>{$vo.create_time|time_format}</td>
                                 <td>
-                                    <a href="{:U('Periodical/edit',array('sid'=>$vo['id']))}" target="_self">编辑</a>
+                                    <a href="{:U('Periodical/edit',array('id'=>$vo['id']))}" target="_self">编辑</a>
                                     <a class="confirm" href="{:U('Periodical/del',array('id'=>$vo['id']))}" target="_self">删除</a>
                                 </td>
                             </tr>
@@ -73,12 +77,14 @@
 </block>
 <block name="script">
     <script type="text/javascript">
-        var url = "__SELF__";
+        var url = "/{$Think.MODULE_NAME}/{$Think.CONTROLLER_NAME}/";
         //导航高亮
-        $(".nav li a[href='"+url+"']").parent().addClass('active');
+        $(".nav li a").each(function(i){
+            if($(this).attr('href').indexOf(url) >= 0){
+                $(this).parent().addClass('active');
+            }
+        });
         $(function(){
-
-
             //搜索功能
             $("#search").click(function(){
                 var url = $(this).attr('url');
