--- a/Application/Student/View/Public/header.html
+++ b/Application/Student/View/Public/header.html
@@ -31,6 +31,9 @@
                     <li data-id="60" class="">
                         <a href="{:U('Student/index')}">论文管理</a>
                     </li>
+                    <li data-id="61" class="">
+                        <a href="{:U('Periodical/index')}">期刊管理</a>
+                    </li>
                     <li class="dropdown admin_nav">
                         <a href="#" class="dropdown-toggle login-nav" data-toggle="dropdown" style="">
                             <notempty name="myinfo.headface_url">
